# MotoView

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md
.cursor/rules/: motoview.mdc
.github/: copilot-instructions.md
.github/workflows/: release.yml  studio-desktop.yml
apps/bzzz/: BUILD_SPEC.md  README.md  dfx.json  motoview.json
apps/bzzz/clients/: README.md
apps/bzzz/clients/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/bzzz/clients/desktop-tauri/src-tauri/capabilities/: default.json
apps/bzzz/clients/desktop-tauri/src-tauri/src/: lib.rs  main.rs
apps/bzzz/clients/mobile-capacitor/: capacitor.config.json  package.json
apps/bzzz/clients/web-auth/: mv-auth.js
apps/bzzz/src/: main.mo
apps/bzzz/src/Components/: BzShell.mview  PulseNav.mview
apps/bzzz/src/Layouts/: AppLayout.mview  ForumLayout.mview  WelcomeLayout.mview
apps/launch/: .gitignore  dfx.json
apps/site/: README.md  dfx.json  motoview.json
apps/site/src/: main.mo
apps/site/tools/: gen-docs.py
apps/studio/: dfx.json  motoview.json
apps/studio/assets/: mview-editor.js  mview.tmLanguage.json
apps/studio/native/: .gitignore  Cargo.toml  Info.plist  README.md  bundle.sh
apps/studio/native/icongen/: Cargo.toml
apps/studio/native/icongen/src/: main.rs
apps/studio/native/src/: app.rs  backend.rs  highlight.rs  lib.rs  main.rs  theme.rs
apps/studio/native/tests/: snapshot_smoke.rs  snapshot_studio.rs
apps/studio/native/tests/fixtures/: crm.forest.json
apps/studio/native/tests/fixtures/unsecured/: motoview.json
apps/studio/native/tests/fixtures/unsecured/src/Layouts/: MainLayout.mview
apps/studio/native/tests/fixtures/unsecured/src/Pages/: Home.mview
apps/studio/templates/: dfx.json  motoview.json
client/: Cargo.toml
client-crypto/: Cargo.toml
client-crypto/src/: lib.rs
client/fonts/: README.md
client/glue/: motoview.css  motoview.js  mv-auth.js
client/src/: abi.rs  cert_verify.rs  diff.rs  ffi.rs  ir.rs  json.rs  lib.rs
client/src/cert_verify/: tests.rs
client/tests/fixtures/: README.md  live_time_delegated_3xwpq.cbor  live_time_nns_ryjl3.cbor
clients/: README.md
clients/android/: CARGO_NDK.md  PLAY_INTEGRITY.md  build.gradle.kts  settings.gradle.kts
clients/android/app/: build.gradle.kts  proguard-rules.pro
clients/android/fastlane/: Appfile  Fastfile
clients/android/motoview/: build.gradle.kts
clients/ios/: APP_ATTEST.md  Package.swift  README.md
clients/ios/fastlane/: Appfile  Fastfile  Matchfile
compiler/: Cargo.toml
compiler/src/: ast.rs  brand_aliases.rs  codegen.rs  color.rs  color_native.rs  fmt.rs  lint.rs  lsp.rs  main.rs  parser.rs  project.rs  services.rs  span.rs  tests.rs
compiler/templates/basic/: README.md
compiler/templates/basic/src/Pages/: Home.mview
compiler/templates/identity/: README.md
compiler/templates/identity/src/Pages/: Home.mview
compiler/templates/secure-form/: .gitignore  README.md  dfx.json  mops.toml  motoview.json
compiler/templates/secure-form/src/Layouts/: MainLayout.mview
compiler/templates/secure-form/src/Pages/: Home.mview
compiler/templates/wallet/: README.md
compiler/templates/wallet/src/Pages/: Home.mview
docs/: ai-tools.md  bzzz-ux-overhaul-plan.md  charts.md  cli.md  client-bridge.md  components.md  control-flow.md  deployment.md  directives-reference.md  drag-drop-and-effects.md  events.md  forms.md  installation.md  introduction.md  layouts.md  motokostudio-roadmap.md  mview-files.md  native-vision-and-plan.md  observability.md  pages-and-routing.md  persistence.md  project-structure.md  protocol.md  pulse-design-spec.md  pulse-execution-plan.md  quickstart.md  roadmap.md  runtime.md  secure-visual-designer-plan.md  security.md  state.md  styling-and-themes.md  svg.md  tier3-leapfrog.md  ux-best-of-the-world.md  validation.md  whats-new.md  why-motoview.md  zero-trust.md
examples/blog/: dfx.json
examples/blog/src/: main.mo
examples/contact/: dfx.json
examples/contact/src/: main.mo
examples/counter/: dfx.json
examples/counter/src/: main.mo
examples/crm/: CROSS_PLATFORM.md  dfx.json
examples/crm/e2e/: package-lock.json  package.json  studio-preview.mjs  web.mjs
examples/crm/src/: main.mo
examples/products/: dfx.json
examples/products/src/: main.mo
examples/svg-network/: dfx.json
examples/svg-network/src/: main.mo
examples/vault/: dfx.json
runtime/: mops.toml
runtime/src/: App.mo  Audit.mo  Base64.mo  CertV2.mo  ChainKey.mo  Charts.mo  ClientAssets.mo  EncStore.mo  Hash.mo  Hex.mo  Html.mo  Ir.mo  Json.mo  Roles.mo  Router.mo  Security.mo  Sha256.mo  Types.mo  Url.mo  VetKeys.mo  WalletAuth.mo  lib.mo
runtime/test/: CertV2Test.mo  ChainKeyTest.mo  IrTest.mo  RolesTest.mo  SecurityTest.mo  WalletAuthTest.mo
site/: build.py  index.html
site/docs/: ai-tools.html  cli.html  client-bridge.html  components.html  control-flow.html  deployment.html  directives-reference.html  drag-drop-and-effects.html  events.html  forms.html  index.html  installation.html  introduction.html  layouts.html  mview-files.html  pages-and-routing.html  project-structure.html  protocol.html  quickstart.html  roadmap.html  runtime.html  security.html  state.html  styling-and-themes.html  svg.html  validation.html  why-motoview.html
site/docs/assets/: site.css
skills/motoview/: SKILL.md  reference.md
tools/: build-client.sh  build-launch.sh  check.sh  native-build.sh
tools/release/: reproducible-build.sh
tools/studio/: README.md  bridge-test.js  build-editor-bootstrap.js  diagnostics-server.js  fanout-test.js  fanout.js  gen-loop.js  generate.md  log-parser-test.js  observability-panel.html  observability.js  replay-test.js  run-tests.sh  signatures.js  validate.sh  view-tree-test.js
tools/studio/editor-test/: editor-test.mjs  package-lock.json  package.json
tools/studio/gen-test/: convergence-test.js  gate-test.js  palette-test.js
tools/studio/grammar-test/: package-lock.json  package.json  tokenize-test.js
tools/vetkeys-roundtrip/: Cargo.toml  README.md  decode.py  run.sh
tools/vetkeys-roundtrip/src/: main.rs
(+104 files in other folders)
