[package]
name = "motokostudio-native"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
description = "Webview-free native MotokoStudio — an egui/eframe desktop IDE for MotoView (.mview) projects."
license = "MIT"
publish = false

# This crate is deliberately STANDALONE — it is NOT a member of the compiler
# workspace. Keeping it out of that workspace means egui/eframe's heavy
# dependency graph never bloats `compiler/` builds. Build it on its own:
#   cargo build  --manifest-path apps/studio/native/Cargo.toml
#   cargo test   --manifest-path apps/studio/native/Cargo.toml
[workspace]

[[bin]]
name = "motokostudio"
path = "src/main.rs"

[lib]
name = "motokostudio"
path = "src/lib.rs"

[dependencies]
# eframe = egui + a window/event loop. We pick the `wgpu` backend (which targets
# Metal on macOS) over the legacy `glow` (OpenGL) backend: Apple has DEPRECATED
# OpenGL, so glow is a long-term risk — wgpu/Metal is the future-proof path.
# Metal is a SYSTEM GPU framework present in the Command-Line-Tools macOS SDK
# (/System/Library/Frameworks/Metal.framework), linked by the CLT linker — so
# there is still NO dependency on full Xcode, NO code-signing, NO $99, and
# crucially NO WebKit / webview. default-features=false drops eframe's optional
# `accesskit`/`web`/`glow` bits; we re-enable exactly: wgpu (Metal renderer) +
# default_fonts (bundled font). wgpu pulls a heavier dep graph (naga shader
# compiler, the wgpu/wgpu-hal/metal stack) and yields a larger binary than glow.
eframe = { version = "0.34", default-features = false, features = ["wgpu", "default_fonts"] }
egui = "0.34"
# Parse the `motoview ... --json` output (diagnostics + preview IR forest).
serde_json = "1"

# NOTE: `rfd` (native file dialog) was REMOVED. Calling
# `rfd::FileDialog::pick_folder()` SYNCHRONOUSLY from inside eframe's `update()`
# ran an NSOpenPanel nested-modal run-loop INSIDE winit's run-loop on macOS — a
# re-entrancy that crashed + silently exited the app the moment a user tried to
# open a project. Opening is now done with a plain path text field + Open button
# (see app.rs / backend::open_project), which never touches AppKit's modal
# machinery and so cannot re-enter the event loop.

[dev-dependencies]
# egui_kittest renders egui UIs to an image with NO window (offscreen wgpu/Metal),
# so the visual design can be snapshot-tested + reviewed headlessly.
egui_kittest = { version = "0.34", features = ["wgpu", "snapshot"] }
image = "0.25"
