[package]
name = "bzzz-desktop"
version = "0.1.0"
description = "Bzzz desktop shell (Tauri) — loads the Bzzz canister UI"
edition = "2021"
rust-version = "1.77"

[lib]
name = "bzzz_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
